--- a/app/src/main/res/layout/aa_fragment_evaluate_challenge.xml
+++ b/app/src/main/res/layout/aa_fragment_evaluate_challenge.xml
@@ -1,11 +1,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:focusable="true"
-    android:focusableInTouchMode="true"
-    tools:context=".ui.fragment.authentication.EvaluateChallengeFragment">
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                tools:context=".ui.fragment.authentication.EvaluateChallengeFragment">
 
     <TextView
         android:id="@+id/tv_challenge_type"
@@ -19,36 +19,35 @@
         android:id="@+id/tv_challenge_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/tv_challenge_type"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
-        android:layout_below="@id/tv_challenge_type"
         android:text="Target Challenge Record"/>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_alignParentBottom="true"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        tools:context=".ui.activity.AuthenticationActivity"
-        android:id="@+id/buttons">
-
-
-        <Button
-            android:id="@+id/approve_challenge"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Fulfill" />
+                  xmlns:tools="http://schemas.android.com/tools"
+                  android:id="@+id/buttons"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_gravity="bottom"
+                  android:layout_alignParentBottom="true"
+                  android:focusable="true"
+                  android:focusableInTouchMode="true"
+                  tools:context=".ui.activity.AuthenticationActivity">
 
         <Button
             android:id="@+id/cancel"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Cancel" />
+            android:text="Cancel"/>
+
+        <Button
+            android:id="@+id/approve_challenge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Fulfill"/>
 
     </LinearLayout>
 
