--- a/app/src/main/res/layout/aa_fragment_select_challenge.xml
+++ b/app/src/main/res/layout/aa_fragment_select_challenge.xml
@@ -1,44 +1,99 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:focusable="true"
-    android:focusableInTouchMode="true"
-    tools:context=".ui.fragment.authentication.ChallengeTypeSelectorFragment">
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                tools:context=".ui.fragment.authentication.ChallengeTypeSelectorFragment">
 
-    <Spinner xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/verifier_challenge_selector"
-        android:layout_width="fill_parent"
+    <TextView
+        android:id="@+id/tv_app_name"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/buttons"
-        android:animateLayoutChanges="true" />
+        android:layout_above="@id/tv_app_url"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="24dp"
+        android:gravity="center_horizontal"
+        android:textSize="24sp"
+        android:textColor="@color/colorPrimary"
+        android:text="Application name"/>
+
+    <TextView
+        android:id="@+id/tv_app_url"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/tv_description"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginBottom="24dp"
+        android:gravity="center_horizontal"
+        android:textColor="@color/textColorSecondary"
+        android:text="Application URL"/>
+
+    <TextView
+        android:id="@+id/tv_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/tv_select_identity"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginBottom="48dp"
+        android:gravity="center_horizontal"
+        android:textSize="16sp"
+        android:text="wants to verify your identity."/>
+
+    <TextView
+        android:id="@+id/tv_select_identity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="36dp"
+        android:layout_marginRight="36dp"
+        android:layout_marginBottom="24dp"
+        android:gravity="center_horizontal"
+        android:textSize="16sp"
+        android:text="Select the challenge you want to send to the application."/>
+
+    <Spinner
+        android:id="@+id/s_challenge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_select_identity"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:spinnerMode="dialog"
+        android:prompt="@string/challenge_type"/>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_alignParentBottom="true"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        tools:context=".ui.activity.AuthenticationActivity"
-        android:id="@+id/buttons">
-
-
-        <Button
-            android:id="@+id/selectChallenge"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Select Challenge" />
+                  xmlns:tools="http://schemas.android.com/tools"
+                  android:id="@+id/buttons"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_alignParentBottom="true"
+                  android:focusable="true"
+                  android:focusableInTouchMode="true"
+                  tools:context=".ui.activity.AuthenticationActivity">
 
         <Button
             android:id="@+id/cancel"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Cancel" />
+            android:text="@string/cancel"/>
+
+        <Button
+            android:id="@+id/select_challenge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/select_challenge"/>
 
     </LinearLayout>
 </RelativeLayout>
