--- a/app/src/main/res/layout/aa_fragment_select_eir.xml
+++ b/app/src/main/res/layout/aa_fragment_select_eir.xml
@@ -1,116 +1,99 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:focusable="true"
-    android:focusableInTouchMode="true"
-    tools:context=".ui.fragment.authentication.EirSelectorFragment">
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                tools:context=".ui.fragment.authentication.EirSelectorFragment">
 
     <TextView
-        android:paddingTop="@dimen/default_button_size"
-        android:id="@+id/tv_welcome_text"
-        android:layout_width="fill_parent"
+        android:id="@+id/tv_app_name"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="20pt"
-        android:text="Siia tuleks panna mingi hea tekst!!"/>
+        android:layout_above="@id/tv_app_url"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="24dp"
+        android:gravity="center_horizontal"
+        android:textSize="24sp"
+        android:textColor="@color/colorPrimary"
+        android:text="Application name"/>
 
+    <TextView
+        android:id="@+id/tv_app_url"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/tv_description"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginBottom="24dp"
+        android:gravity="center_horizontal"
+        android:textColor="@color/textColorSecondary"
+        android:text="Application URL"/>
 
-    <!-- app name -->
-    <LinearLayout
-        android:paddingTop="@dimen/default_button_size"
-        android:layout_below="@+id/tv_welcome_text"
-        android:id="@+id/layout_appName"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/tv_application_name_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.25"
-            android:text="Application Name:" />
+    <TextView
+        android:id="@+id/tv_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/tv_select_identity"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginBottom="48dp"
+        android:gravity="center_horizontal"
+        android:textSize="16sp"
+        android:text="wants to verify your identity."/>
 
-        <TextView
-            android:id="@+id/tv_application_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.75"
-            android:layout_below="@+id/tv_application_name_text"
-            android:text="Demo application" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/tv_select_identity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="36dp"
+        android:layout_marginRight="36dp"
+        android:layout_marginBottom="24dp"
+        android:gravity="center_horizontal"
+        android:textSize="16sp"
+        android:text="Select the identity you want to verify yourself with."/>
 
-    <!-- App URL -->
-    <LinearLayout
-        android:id="@+id/layout_appUrl"
-        android:layout_below="@+id/layout_appName"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/tv_application_url_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_application_name"
-            android:layout_weight="0.25"
-            android:text="Application URL:" />
-
-        <TextView
-            android:id="@+id/tv_application_url"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.75"
-            android:layout_below="@+id/tv_application_url_text"
-            android:text="Demo URL" />
-    </LinearLayout>
-
-    <!-- EIR select-->
-    <LinearLayout
-        android:id="@+id/layout_eir"
-        android:layout_below="@+id/layout_appUrl"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/tv_eir_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_application_name"
-            android:layout_weight="0.25"
-            android:text="Select identity:" />
-        <Spinner xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/verifier_eir_selector"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_eir_name"
-            android:layout_weight="0.75"
-            android:animateLayoutChanges="true" />
-
-    </LinearLayout>
+    <Spinner
+        android:id="@+id/s_identity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_select_identity"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:spinnerMode="dialog"
+        android:prompt="@string/your_identity"/>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_alignParentBottom="true"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
-        tools:context=".ui.activity.AuthenticationActivity"
-        android:id="@+id/buttons">
-
-
-        <Button
-            android:id="@+id/authenticate"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Select Identity" />
+                  xmlns:tools="http://schemas.android.com/tools"
+                  android:id="@+id/buttons"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_alignParentBottom="true"
+                  android:focusable="true"
+                  android:focusableInTouchMode="true"
+                  tools:context=".ui.activity.AuthenticationActivity">
 
         <Button
             android:id="@+id/cancel"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Cancel" />
+            android:text="@string/cancel"/>
+
+        <Button
+            android:id="@+id/authenticate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/select_identity"/>
 
     </LinearLayout>
 </RelativeLayout>
