--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="textColor">#212121</color>
     <color name="textColorPrimary">#FFFFFF</color>
     <color name="textColorSecondary">#6D6D6D</color>
+    <color name="textColorError">#bc5246</color>
+    <color name="textColorSuccess">#45994a</color>
 
     <color name="iconColor">#FFFFFF</color>
     <color name="colorDivider">#BDBDBD</color>
