--- a/app/src/main/res/layout/custom_list_item.xml
+++ b/app/src/main/res/layout/custom_list_item.xml
@@ -6,10 +6,10 @@
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
-        android:layout_height="24dp"
+        android:layout_height="27dp"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="13dp"
         android:paddingBottom="4dp"
         android:gravity="left|center"
         android:textSize="18sp"/>
@@ -23,7 +23,7 @@
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
         android:layout_marginBottom="16dp"
-        android:padding="2dp"
+        android:paddingBottom="1dp"
         android:gravity="left|center"
         android:textSize="12sp"
         android:textStyle="bold"
